spacing problem solved for smaller devices

--- a/src/Components/AboutSlide.css
+++ b/src/Components/AboutSlide.css
@@ -23,6 +23,9 @@
 }
 
 @media only screen and (max-width:1000px){
+    .about_slide{
+        gap: 40px;
+    }
     
 }
 
