--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -66,6 +66,8 @@
 
     .project_grid_box{
         grid-template-columns: 1fr;
+        gap: 20px;
+
 
 
     }
