--- a/src/Components/Skill.css
+++ b/src/Components/Skill.css
@@ -5,7 +5,7 @@
 .skill_grid_box{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    gap: 30px;
+    gap: 20px;
 }
 
 
@@ -35,6 +35,7 @@
         
         grid-template-columns: 1fr 1fr 1fr;
         
+        
     }
 
 
@@ -45,6 +46,7 @@
     .skill_grid_box{
         
         grid-template-columns: 1fr 1fr;
+    
         
     }
 
