--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,23 @@ p{
 
 }
 
+@media only screen and (max-width:1000px){
+
+    .section{
+        padding: 60px 8%;
+    }
+
+
+
+}
+
+@media only screen and (max-width:750px){
+    .section{
+        padding: 40px 8%;
+    }
+
+}
+
 
 
 
